@@ -16,9 +16,12 @@
 
 * Current
 ** Added
+Added support for envp in cc_x86.s
 
 ** Changed
 Reduced stack usage thanks to akkartik
+Changed argv, argc behavior in cc_x86.s
+updated stage3/M2-Planet_x86.c to commit 56db0fcad4b3362d14d20e69a17e45d751c264a5
 
 ** Fixed
 Add debug label
